<resources>
    <string name="app_name" translatable="false">BusyBox</string>
    <string name="app_version">version %1$s</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Information</string>
    <string name="action_zip">Zip archive</string>
    <string name="action_about">About</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="install_button">INSTALL</string>
    <string name="remove_button">REMOVE</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="busybox_preferences">BusyBox</string>
    <string name="title_installdir">Install path</string>
    <string name="dialog_title_installdir">Install path</string>
    <string name="title_applets">Install applets</string>
    <string name="summary_applets">Create symlinks to applets</string>
    <string name="title_replace">Replace applets</string>
    <string name="summary_replace">Replace existing applets</string>
    <string name="title_ramdisk">Install in RAM</string>
    <string name="summary_ramdisk">Temporary installation in memory</string>
    <string name="gui_preferences">Interface</string>
    <string name="title_language">Language</string>
    <string name="dialog_title_language">Choose language</string>
    <string name="title_theme">Theme</string>
    <string name="dialog_title_theme">Choose theme</string>
    <string name="title_fontsize">Font size</string>
    <string name="dialog_title_fontsize">Font size</string>
    <string name="title_maxlines">Scroll size</string>
    <string name="dialog_title_maxlines">Scroll size</string>
    <string name="title_timestamp">Timestamp</string>
    <string name="summary_timestamp">Show timestamp</string>
    <string name="title_confirm_install_dialog">Install</string>
    <string name="message_confirm_install_dialog">Install BusyBox to the system?</string>
    <string name="title_confirm_remove_dialog">Remove</string>
    <string name="message_confirm_remove_dialog">Remove BusyBox from the system?</string>
    <string name="title_export_dialog">Archive for recovery:</string>
    <string name="toast_export_success">The zip archive successfully saved</string>
    <string name="toast_export_error">Failed to save the zip archive</string>
    <string name="debug_preferences">Debug</string>
    <string name="title_trace">Trace mode</string>
    <string name="summary_trace">Enable tracing mode</string>
    <string name="title_logger">Logging</string>
    <string name="summary_logger">Save logs to a file</string>
    <string name="title_logfile">Log file</string>
    <string name="dialog_title_logfile">Log file</string>
    <string name="write_permissions_disallow">The app was not allowed to write to your storage</string>
    <string name="help_text">Loading...</string>
    <string name="about_text">This application is an BusyBox installer for Android.\n\nBusyBox combines tiny versions of many common UNIX utilities into a single small executable. It provides replacements for most of the utilities you usually find in GNU fileutils, shellutils, etc. The utilities in BusyBox generally have fewer options than their full–featured GNU cousins; however, the options that are included provide the expected functionality and behave very much like their GNU counterparts. BusyBox provides a fairly complete environment for any small or embedded system.\n\nFor more information see <a href="https://github.com/meefik/busybox">project page</a>, <a href="http://4pda.ru/forum/index.php?showtopic=694640">forum</a> or <a href="https://meefik.github.io">developer site</a>.\n\n© 2015–2022 Anton Skshidlevsky, GPLv2</string>

    <string-array name="language_entries" translatable="false">
        <item>Беларускі</item>
        <item>Deutsch</item>
        <item>English</item>
        <item>Español</item>
        <item>Français</item>
        <item>한국어</item>
        <item>Norwegian</item>
        <item>Polski</item>
        <item>Русский</item>
        <item>Український</item>
        <item>简体中文</item>
        <item>正體中文</item>
    </string-array>
    <string-array name="language_values" translatable="false">
        <item>be</item>
        <item>de</item>
        <item>en</item>
        <item>es</item>
        <item>fr</item>
        <item>ko</item>
        <item>nb</item>
        <item>pl</item>
        <item>ru</item>
        <item>uk</item>
        <item>zh_CN</item>
        <item>zh_TW</item>
    </string-array>

    <string-array name="theme_entries">
        <item>Dark</item>
        <item>Light</item>
    </string-array>
    <string-array name="theme_values" translatable="false">
        <item>dark</item>
        <item>light</item>
    </string-array>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
