<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/installBtn">

        <TextView
            android:id="@+id/outputView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contextClickable="true"
            android:enabled="true"
            android:text="@string/help_text"
            android:textIsSelectable="true"
            android:textSize="12sp"
            android:typeface="monospace" />

    </ScrollView>

    <Button
        android:id="@+id/installBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="installBtnOnClick"
        android:text="@string/install_button"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/removeBtn"
        android:minWidth="110dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/removeBtn"
        android:onClick="removeBtnOnClick"
        android:text="@string/remove_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:minWidth="110dp" />

</RelativeLayout>
